--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,135 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Barlow&family=Bungee&display=swap" rel="stylesheet">
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+			{% block importmap %}
+				{{ importmap('app') }}
+			{% endblock %}
+		{% endblock %}
+	</head>
+	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg bg-body-tertiary">
+				<div class="container align-items-start">
+					<a class="navbar-brand w-25" href="index.html"><img class="w-50" src="imgs/logo.png" alt=""></a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+						<a class="nav-link active" aria-current="page" href="#">
+							<h1>Accueil</h1>
+						</a>
+						<button class="btn btn-outline-info" type="submit">Se connecter</button>
+					</div>
+				</div>
+			</nav>
+			<nav class="navbar navbar-expand-lg bg-body-tertiary">
+				<div class="container">
+					<div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<form class="d-flex" role="search">
+									<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+									<button class="btn btn-outline-success" type="submit">Search</button>
+								</form>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Filtre</a>
+								<ul class="dropdown-menu">
+									<li>
+										<a class="dropdown-item" href="#">Action</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="#">Another action</a>
+									</li>
+									<li>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+						<a class="nav-link" aria-current="page" href="#">Créer un compte</a>
+					</div>
+				</div>
+			</nav>
+		</header>
+		{% block body %}{% endblock %}
+	</body>
+	<footer class="text-bg-dark">
+		<div class="container">
+			<div class="row gy-4">
+				<div class="footer-logo col-lg-3">
+					<img src="imgs/logo.png" alt="#">
+					<ul class="footer-contact">
+						<li>Adresse</li>
+						<li>Téléphone</li>
+						<li>Mail</li>
+					</ul>
+					<ul class="footer-social d-flex justify-content-between">
+						<li>
+							<a href="#"><img src="http://placehold.it/30x30"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.it/30x30"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.it/30x30"></a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-lg-3">
+					<h1>Navigation</h1>
+					<ul class="footer-nav">
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer-about col-lg-3">
+					<h1>Qui sommes-nous?</h1>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae sapiente officia earum? Quia ea modi nostrum ad libero et corporis quisquam eius, nemo vel! Itaque delectus similique voluptatum temporibus!</p>
+				</div>
+				<div class="footer-event col-lg-3">
+					<h1>à découvrir</h1>
+					<ul class="footer-event-box d-flex flex-wrap">
+						<li>
+							<a href="#"><img src="{{ absolute_url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK6c34VhXvxEpsH0wG1WQHdR3tk89ZTCK4MhDfLfqrCw&s')}}" alt="Instagram 01"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.it/85x85" alt="Instagram 02"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.it/85x85" alt="Instagram 03"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.it/85x85" alt="Instagram 04"></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 </html>
