--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,93 @@
 
 {% block body %}
 
-    home
+	<div class="container">
+		<h1 class="my-5 text-center">Liste des catégories</h1>
+		<ul class="w-100 d-flex justify-content-between category flex-wrap">
+			<li class="nav-item">
+				<a class="nav-link d-flex gap-1 align-items-center" href="#">
+					<div class="btn-category"></div>
+					<p class="mb-0">Catégorie 1</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link d-flex gap-1 align-items-center" href="#">
+					<div class="btn-category"></div>
+					<p class="mb-0">Catégorie 1</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link d-flex gap-1 align-items-center" href="#">
+					<div class="btn-category"></div>
+					<p class="mb-0">Catégorie 1</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link d-flex gap-1 align-items-center" href="#">
+					<div class="btn-category"></div>
+					<p class="mb-0">Catégorie 1</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link d-flex gap-1 align-items-center" href="#">
+					<div class="btn-category"></div>
+					<p class="mb-0">Catégorie 1</p>
+				</a>
+			</li>
+		</ul>
+		<h2 class="my-5">Derniers évènements</h2>
+		<div class="row my-5">
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<img src="..." class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<img src="..." class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<img src="..." class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row my-5">
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<img src="..." class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<img src="..." class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<img src="..." class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
