--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -11966,5 +11966,5 @@ textarea.form-control-lg {
   }
 }
 body {
-  background-color: skyblue;
+  background-color: rgb(18, 81, 102);
 }/*# sourceMappingURL=app.css.map */
