--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -38,7 +38,7 @@
 		</ul>
 		<h2 class="my-5">Derniers évènements</h2>
 		<div class="row my-5">
-			<div class="col">
+			<div class="col-4">
 				<div class="card" style="width: 18rem;">
 					<img src="..." class="card-img-top" alt="...">
 					<div class="card-body">
@@ -46,7 +46,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-4">
 				<div class="card" style="width: 18rem;">
 					<img src="..." class="card-img-top" alt="...">
 					<div class="card-body">
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-4">
 				<div class="card" style="width: 18rem;">
 					<img src="..." class="card-img-top" alt="...">
 					<div class="card-body">
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 		<div class="row my-5">
-			<div class="col">
+			<div class="col-4">
 				<div class="card" style="width: 18rem;">
 					<img src="..." class="card-img-top" alt="...">
 					<div class="card-body">
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-4">
 				<div class="card" style="width: 18rem;">
 					<img src="..." class="card-img-top" alt="...">
 					<div class="card-body">
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-4">
 				<div class="card" style="width: 18rem;">
 					<img src="..." class="card-img-top" alt="...">
 					<div class="card-body">
