--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,7 +24,7 @@
                     <h5 class="card-title">{{ evenement.nomEvenement }}</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">{{ evenement.dateEvenement ? evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
                     <p class="card-text">{{ evenement.descriptif }}</p>
-                    <button type="button" class="btn btn-secondary">En savoir plus</button>
+                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
