--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-						<a class="nav-link active" aria-current="page" href="#">
+						<a class="nav-link active" aria-current="page" href="/">
 							<h1>Accueil</h1>
 						</a>
 						{% if app.user %}
