--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,15 +15,16 @@
     </ul>
 </section>
 <section class="home-event-overview">
-    <div class="row">
+    <div class="row my-5">
         {% for evenement  in evenements %}
-        <div class="col-sm-12 col-md-6 col-lg-4 event-card">
-            <div class="card h-100">
+        <div class="col-sm-12 col-md-6 col-lg-4 event-card mb-5">
+            <div class="card">
                 <img src="/assets/images/events/game_day.jpg" alt="" />
                 <div class="card-body">
                     <h5 class="card-title">{{ evenement.nomEvenement }}</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">{{ evenement.dateEvenement ? evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
-                    <p class="card-text">{{ evenement.descriptif }}</p>
+                    <p class="card-text">{{ evenement.descriptif[:80] ~ (evenement.descriptif|length > 80 ? '…' ) }}
+                    </p>
                     <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
