--- a/templates/image_evenement/show.html.twig
+++ b/templates/image_evenement/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>LienPhoto</th>
-                <td>{{ image_evenement.lienPhoto }}</td>
+                <td><img src="{{ asset('imgs/evenement/' ~ image_evenement.imageName ~ '')  }}" alt=""></td>
             </tr>
             <tr>
                 <th>Couverture</th>
