--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Here We Go !!{% endblock %}
 
 {% block body %}
 <div class="home-banner">
@@ -16,20 +16,20 @@
 </section>
 <section class="home-event-overview">
     <div class="row my-5">
-        {% for evenement  in evenements %}
+    {% for image in images %}
         <div class="col-sm-12 col-md-6 col-lg-4 event-card mb-5">
-            <div class="card">
-                <img src="/assets/images/events/game_day.jpg" alt="" />
+            <div class="card" style="height:450px">
+                <img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '')  }}" alt="" style="height:230px" />
                 <div class="card-body">
-                    <h5 class="card-title">{{ evenement.nomEvenement }}</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">{{ evenement.dateEvenement ? evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
-                    <p class="card-text">{{ evenement.descriptif[:80] ~ (evenement.descriptif|length > 80 ? '…' ) }}
+                    <h5 class="card-title">{{ image.evenement.nomEvenement }}</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">{{ image.evenement.dateEvenement ? image.evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
+                    <p class="card-text">{{ image.evenement.descriptif[:80] ~ (image.evenement.descriptif|length > 80 ? '…' ) }}
                     </p>
-                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
+                    <a href="{{ path('app_evenement_show', {'id': image.evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
-        {% endfor %}
+    {% endfor %}
     </div>
 </section>
 {% endblock %}
