gestion de l'accueil, de l'affichage d'un event, des couleurs de catégorie et des dates au bon format

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -11970,8 +11970,9 @@ textarea.form-control-lg {
   justify-content: center;
 }
 .home-category-list ul {
-  justify-content: space-between;
+  justify-content: center;
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   padding-inline-start: 0;
 }
@@ -23977,14 +23978,6 @@ h1, .h1 {
   letter-spacing: 5px;
 }
 
-.btn-category {
-  width: 20px;
-  height: 20px;
-  border-radius: 100%;
-  background: red;
-  border: 1px solid black;
-}
-
 .category {
   list-style: none;
 }
@@ -23993,4 +23986,15 @@ h1, .h1 {
   font-family: "Barlow", sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.couverture img {
+  max-width: 650px;
+}
+
+.btn-category {
+  width: 150px;
+  height: 40px;
+  border-radius: 30px;
+  border: 1px solid;
 }/*# sourceMappingURL=app.css.map */
