--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,7 +83,7 @@
         {% endblock %}
         </div>
 		<footer class="text-bg-dark">
-			<div class="container">
+			<div class="container mt-5">
 				<div class="row gy-4">
 					<div class="footer-logo col-lg-3">
 						<img src="{{ asset('imgs/logo.png') }}" alt="#">
