--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,15 @@
 <section class="home-category-list">
     <ul>
     {% for categorie in categories %}
-        <li><a href="#" class="btn">{{ categorie.libelleCategorie }}</a></li>
+        <li>
+            {% if categorie.couleur != '#FFFFFF' %}
+            <a href="#" class="btn btn-category m-4" style="color: white; background-color:{{ categorie.couleur}}">
+            {% else %}
+            <a href="#" class="btn btn-category m-4" style="background-color:{{ categorie.couleur}}">
+            {% endif %}
+                {{ categorie.libelleCategorie }}
+            </a>
+        </li>
     {% endfor %}
     </ul>
 </section>
@@ -25,7 +33,7 @@
                     <h6 class="card-subtitle mb-2 text-body-secondary">{{ image.evenement.dateEvenement ? image.evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
                     <p class="card-text">{{ image.evenement.descriptif[:80] ~ (image.evenement.descriptif|length > 80 ? '…' ) }}
                     </p>
-                    <a href="{{ path('app_evenement_show', {'id': image.evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
+                    <a href="{{ path('app_home_show', {'id': image.evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
