--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,12 +11,39 @@
         padding-inline-start: 0;
     }
 }
+.event-card {
+    position: relative;
+    z-index: 0;
+}
 
-@import "~bootstrap/scss/bootstrap";
+.side-nav {
+    background: rgb(248,249,250);
+    background: linear-gradient(180deg, rgba(248,249,250,1) 5%, rgba(33,37,41,1) 35%);
+}
+
+.event-badge {
+    width: 100px;
+    height: 100px;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    position: absolute;
+    display: block;
+    bottom: 0px;
+    right: 0px;
+    background-color: black;
+    z-index:  -1;
+
+}
 
 %footer-list {
     padding-inline-start: 0;
     list-style: none;
+}
+
+footer {
+    padding-top: 2rem;
+    & h1 {
+        font-size: 24px;
+    }
 }
 
 .footer-logo {
