--- a/templates/home/categorie.html.twig
+++ b/templates/home/categorie.html.twig
@@ -26,7 +26,8 @@
     <div class="row my-5">
     {% for image in images %}
         <div class="col-sm-12 col-md-6 col-lg-4 event-card mb-5">
-            <div class="card" style="height:450px; border:5px solid {{ image.evenement.categorie.couleur}}">
+        <div class="event-badge" style="background-color: {{ image.evenement.categorie.couleur}}"></div>
+            <div class="card" style="height:450px; max-width: 80%">
                 <img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '')  }}" alt="" style="height:230px" />
                 <div class="card-body">
                     <h5 class="card-title">{{ image.evenement.nomEvenement }}</h5>
