--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -44,5 +44,6 @@
             </tr>
         </tbody>
     </table>
+    <a href="#" class="btn btn-success">Inscription</a>
 </div>
 {% endblock %}
