--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,8 +25,8 @@
 <section class="home-event-overview">
     <div class="row gx-5 my-5">
     {% for image in images %}
-        <div class="col-sm-12 col-md-6 col-lg-4 event-card mb-5">
-            <div class="card event-card" style="height:450px; max-width: 80%">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-5">
+            <div class="card event-card" style="height:450px;">
                 <div class="event-badge" style="background-color: {{ image.evenement.categorie.couleur}}"></div>
                 <img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '')  }}" alt="" style="height:230px" />
                 <div class="card-body">
