--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,7 +3,8 @@
 .home-category-list {
     display: flex;
     justify-content: center;
-    & ul{
+
+    & ul {
         justify-content: center;
         display: flex;
         flex-wrap: wrap;
@@ -11,14 +12,15 @@
         padding-inline-start: 0;
     }
 }
+
 .event-card {
     position: relative;
     z-index: 0;
 }
 
 .side-nav {
-    background: rgb(248,249,250);
-    background: linear-gradient(180deg, rgba(248,249,250,1) 5%, rgba(33,37,41,1) 35%);
+    background: rgb(248, 249, 250);
+    background: linear-gradient(180deg, rgba(248, 249, 250, 1) 5%, rgba(33, 37, 41, 1) 35%);
 }
 
 .event-badge {
@@ -30,8 +32,7 @@
     bottom: 0px;
     right: 0px;
     background-color: black;
-    z-index:  -1;
-
+    z-index: -1;
 }
 
 %footer-list {
@@ -41,6 +42,7 @@
 
 footer {
     padding-top: 2rem;
+
     & h1 {
         font-size: 24px;
     }
@@ -96,11 +98,11 @@ h1 {
     font-style: normal;
 }
 
-.couverture img{
+.couverture img {
     max-width: 650px;
 }
 
-.btn-category{
+.btn-category {
     width: 150px;
     height: 40px;
     border-radius: 30px;
