--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -27,6 +27,10 @@
                 <td>{{ evenement.codePostalEvenement }}</td>
             </tr>
             <tr>
+                <th>Adress</th>
+                <td>{{ evenement.adresse }}</td>
+            </tr>
+            <tr>
                 <th>NomLieu</th>
                 <td>{{ evenement.nomLieu }}</td>
             </tr>
@@ -124,6 +128,6 @@
         </tbody>
     </table>
     <a href="{{ path('app_transport_new', {'id': evenement.id}) }}" class="btn btn-primary">Proposer un moyen de transport</a>
-    <a href="#" class="btn btn-success">Inscription</a>
+    <a href="{{ path('app_participation_new', {'id': evenement.id}) }}" class="btn btn-success">Inscription</a>
 </div>
 {% endblock %}
