--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Here We Go !!{% endblock %}
 
 {% block body %}
+{% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
 <div class="home-banner">
     <h1>Idée de sortie</h1>
     <img>
