--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -120,7 +120,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <a href="#" class="btn btn-success">Réserver</a>
+                            <a href="{{ path('app_reservation_new', {'id': transport.id})}}" class="btn btn-success">Réserver</a>
                         </div>
                     </div>
                 </td>
